--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "realesrgan",
+  "name": "share-music",
   "private": true,
   "version": "2.0.0",
   "type": "module",
   "license": "MIT",
-  "repository": "https://github.com/share121/realesrgan-ncnn-vulkan-gui/",
+  "repository": "https://github.com/share121/share-music/",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
