--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "realesrgan"
+name = "share-music"
 version = "2.0.0"
 description = "图像无损放大"
 authors = ["share121"]
 license = "MIT"
-repository = "https://github.com/share121/realesrgan-ncnn-vulkan-gui/"
+repository = "https://github.com/share121/share-music/"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
